dfir_rs/tests/snapshots/surface_persist__persist@graphvis_mermaid.snap
---
source: dfir_rs/tests/surface_persist.rs
expression: "df.meta_graph().unwrap().to_mermaid(& Default :: default())"
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"(1v1) <code>None source_iter([1, 2, 3])</code>"/]:::pullClass
2v1[\"(2v1) <code>None persist::&lt;'static&gt;()</code>"/]:::pullClass
3v1[/"(3v1) <code>None tee()</code>"\]:::pushClass
4v1[/"(4v1) <code>None for_each(|v| pull_tx.send(v).unwrap())</code>"\]:::pushClass
5v1[/"(5v1) <code>None persist::&lt;'static&gt;()</code>"\]:::pushClass
6v1[/"(6v1) <code>None for_each(|v| push_tx.send(v).unwrap())</code>"\]:::pushClass
2v1-->3v1
1v1-->2v1
3v1-->4v1
5v1-->6v1
3v1-->5v1
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    1v1
    2v1
    3v1
    4v1
    5v1
    6v1
    subgraph sg_1v1_var_my_tee ["var <tt>my_tee</tt>"]
        1v1
        2v1
        3v1
    end
end
