dfir_rs/tests/snapshots/surface_persist__persist_mut_keyed@graphvis_mermaid.snap
---
source: dfir_rs/tests/surface_persist.rs
expression: df.meta_graph().unwrap().to_mermaid(cfg)
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"(1v1) <code>source_iter([Persist(1, 1), Persist(2, 2), Persist(3, 3), Persist(4, 4), Delete(2)])</code>"/]:::pullClass
2v1[\"(2v1) <code>persist_mut_keyed::&lt;'mutable&gt;()</code>"/]:::pullClass
3v1[/"(3v1) <code>tee()</code>"\]:::pushClass
4v1[/"(4v1) <code>for_each(|(_k, v)| pull_tx.send(v).unwrap())</code>"\]:::pushClass
5v1[/"<div style=text-align:center>(5v1)</div> <code>flat_map(|(k, v)| {<br>    if v == 3 { vec![Persist(k, v), Delete(k)] } else { vec![Persist(k, v)] }<br>})</code>"\]:::pushClass
6v1[/"(6v1) <code>persist_mut_keyed::&lt;'mutable&gt;()</code>"\]:::pushClass
7v1[/"(7v1) <code>for_each(|(_k, v)| push_tx.send(v).unwrap())</code>"\]:::pushClass
2v1-->3v1
1v1-->2v1
3v1-->4v1
6v1-->7v1
5v1-->6v1
3v1-->5v1
subgraph sg_1v1 ["sg_1v1"]
    4v1
    5v1
    6v1
    7v1
    subgraph sg_1v1_var_my_tee ["var <tt>my_tee</tt>"]
        1v1
        2v1
        3v1
    end
end
