dfir_rs/tests/snapshots/surface_persist__persist_pull@graphvis_dot.snap
---
source: dfir_rs/tests/surface_persist.rs
expression: hf.meta_graph().unwrap().to_dot(cfg)
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) source_iter([1])", shape=invhouse, fillcolor="#88aaff"]
    n2v1 [label="(n2v1) persist::<'static>()", shape=invhouse, fillcolor="#88aaff"]
    n3v1 [label="(n3v1) null()", shape=invhouse, fillcolor="#88aaff"]
    n4v1 [label="(n4v1) union()", shape=invhouse, fillcolor="#88aaff"]
    n5v1 [label="(n5v1) persist::<'static>()", shape=invhouse, fillcolor="#88aaff"]
    n6v1 [label="(n6v1) null()", shape=invhouse, fillcolor="#88aaff"]
    n7v1 [label="(n7v1) union()", shape=invhouse, fillcolor="#88aaff"]
    n8v1 [label="(n8v1) fold(|| 0, |a: &mut _, b| *a += b)", shape=invhouse, fillcolor="#88aaff"]
    n9v1 [label="(n9v1) for_each(|x| result_send.send(x).unwrap())", shape=house, fillcolor="#ffff88"]
    n2v1 -> n4v1
    n1v1 -> n2v1
    n3v1 -> n4v1
    n5v1 -> n7v1
    n4v1 -> n5v1
    n6v1 -> n7v1
    n8v1 -> n9v1
    n7v1 -> n8v1
    subgraph sg_1v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1"
        n1v1
        n2v1
        n3v1
        n6v1
        subgraph sg_1v1_var_m0 {
            cluster=true
            label="var m0"
            n4v1
            n5v1
        }
        subgraph sg_1v1_var_m1 {
            cluster=true
            label="var m1"
            n7v1
            n8v1
            n9v1
        }
    }
}
