dfir_rs/tests/snapshots/surface_persist__persist_pull@graphvis_mermaid.snap
---
source: dfir_rs/tests/surface_persist.rs
expression: hf.meta_graph().unwrap().to_mermaid(cfg)
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"(1v1) <code>source_iter([1])</code>"/]:::pullClass
2v1[\"(2v1) <code>persist::&lt;'static&gt;()</code>"/]:::pullClass
3v1[\"(3v1) <code>null()</code>"/]:::pullClass
4v1[\"(4v1) <code>union()</code>"/]:::pullClass
5v1[\"(5v1) <code>persist::&lt;'static&gt;()</code>"/]:::pullClass
6v1[\"(6v1) <code>null()</code>"/]:::pullClass
7v1[\"(7v1) <code>union()</code>"/]:::pullClass
8v1[\"(8v1) <code>fold(|| 0, |a: &amp;mut _, b| *a += b)</code>"/]:::pullClass
9v1[/"(9v1) <code>for_each(|x| result_send.send(x).unwrap())</code>"\]:::pushClass
2v1-->4v1
1v1-->2v1
3v1-->4v1
5v1-->7v1
4v1-->5v1
6v1-->7v1
8v1-->9v1
7v1-->8v1
subgraph sg_1v1 ["sg_1v1"]
    1v1
    2v1
    3v1
    6v1
    subgraph sg_1v1_var_m0 ["var <tt>m0</tt>"]
        4v1
        5v1
    end
    subgraph sg_1v1_var_m1 ["var <tt>m1</tt>"]
        7v1
        8v1
        9v1
    end
end
